Fix sensor view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 
   <body>
     <nav class="navbar nav-tabs navbar-expand-lg sticky-top navbar-light bg-light"> 
-      <a class="navbar-brand" href="/"><img src="uptimlogo.png" width="100"></a>
+      <a class="navbar-brand" href="/"><img src="images/uptimlogo.png" width="100"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -109,7 +109,6 @@
       </div>
     </nav>
 
-    <br>
     <br>
     <%= yield %>
   </body>
