added associations, fixed show sensor list and add sensor

--- a/app/views/sensors/index.html.erb
+++ b/app/views/sensors/index.html.erb
@@ -71,7 +71,7 @@
         <a href="/add_new_sensor_page">Add a sensors</a>
       </li>
       <li>
-        <a href="/sensor_list">View sensor list</a>
+        <a href="/show_sensor_list">View sensor list</a>
       </li>
     </ul>
   </div>
