--- a/app/views/sensors/show_sensor_list.html.erb
+++ b/app/views/sensors/show_sensor_list.html.erb
@@ -57,7 +57,7 @@
         </td>
 
         <td>
-          [<%= (sensor.location.latitude/1000000.0).to_s %>,  <%= (sensor.location.longitude/1000000.0).to_s %>]
+          [<%= sensor.latitude.to_s %>,  <%= sensor.longitude.to_s %>]
         </td>
 
         <td>
