Sensor and Sensor Types done

--- a/app/views/sensor_types/index.html.erb
+++ b/app/views/sensor_types/index.html.erb
@@ -10,6 +10,7 @@
 
 <div class="row mb-3">
   <div class="col-md-8 offset-md-2">
+    <a href="/add_new_sensor_page">Go Back</a>
     <h2>
       Add a new sensor type
     </h2>
@@ -73,8 +74,8 @@
         </td>
 
         <td>
-          <a href="/sensor_types/<%= sensor_type.id %>">
-            Show details
+          <a href="/delete_sensor_type/<%= sensor_type.id %>">
+            Delete
           </a>
         </td>
       </tr>
