--- a/app/views/sensor_types/show.html.erb
+++ b/app/views/sensor_types/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row mb-3">
   <div class="col-md-8 offset-md-2">
     <h1>
-      Sensor type #<%= @sensor_type.id %> details
+      Sensor type details
     </h1>
 
     <div class="row mb-3">
