--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 
   <body>
     <nav class="navbar nav-tabs navbar-expand-lg sticky-top navbar-light bg-light"> 
-      <a class="navbar-brand" href="/"><img src="images/uptimlogo.png" width="100"></a>
+      <a class="navbar-brand" href="/"><img src="/images/uptimlogo.png" width="100"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -99,6 +99,9 @@
             </li>
           <% end %>
         </ul>
+        <span class="nav-link">
+          Welcome <%= @current_traffic_manager.first_name %>
+        </span>
         <form class="form-inline" action="/traffic_manager_sign_in">
           <% if @current_traffic_manager == nil %>
               <a class="nav-link" href="/traffic_manager_sign_in">Sign In</a>
