--- a/app/views/sensors/add_sensor.html.erb
+++ b/app/views/sensors/add_sensor.html.erb
@@ -4,25 +4,22 @@
       Add a new sensor
     </h2>
 
+    <!-- add sensor types popup -->
+    
+        
     <form action="/insert_sensor" method="post">
       <div class="form-group">
         <label for="type_id_box">
-          Sensor Type
+          Sensor Type 
         </label>
 
         <select id="type_id_box" name="type_id_from_query" class="form-control">
+          <option value="" selected disabled hidden>Choose here</option>
           <% @sensortypes.each do |thistype| %>
             <option value="<%= thistype.id %>"><%= thistype.sensor_type %></option>
           <% end %>
         </select>
-      </div>
-
-      <div class="form-group">
-        <label for="location_id_box">
-          Location
-        </label>
-
-        <input type="text" id="location_id_box" name="location_id_from_query" class="form-control">
+        <a href="/sensor_types">Add new sensor type</a>
       </div>
 
       <div class="form-group">
@@ -33,25 +30,34 @@
         <input type="text" id="sensor_name_box" name="sensor_name_from_query" class="form-control">
       </div>
 
+      <div class="form-group">
+        <label for="latitude_box">
+          Latitude
+        </label>
+
+        <input type="text" id="latitude_box" name="latitude_from_query" class="form-control">
+      </div>
+
+      <div class="form-group">
+        <label for="longitude_box">
+          Longitude
+        </label>
+
+        <input type="text" id="longitude_box" name="longitude_from_query" class="form-control">
+      </div>
+
       <div class="custom-control custom-checkbox mb-3">
         <input type="checkbox" class="custom-control-input" id="operational_status_box" name="operational_status_from_query" value="1">
 
         <label class="custom-control-label" for="operational_status_box">Operational status</label>
       </div>
 
-      <div class="form-group">
-        <label for="lane_id_box">
-          Lane
-        </label>
-
-        <input type="text" id="lane_id_box" name="lane_id_from_query" class="form-control">
-      </div>
-
+      
       <button class="btn btn-block btn-outline-secondary">
         Create sensor
       </button>
     </form>
     <hr>
-    <a href="#">Add new sensor type</a>
+    
   </div>
 </div>
