--- a/app/views/sensors/index.html.erb
+++ b/app/views/sensors/index.html.erb
@@ -64,14 +64,25 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="col-md-10">
+<div class="row">
+  <div class="col-sm-1">
+  </div>
+  <div class="col-sm-4">
     <ul style="list-style-type:none;"> 
       <li>
         <a href="/add_new_sensor_page">Add a sensors</a>
       </li>
       <li>
         <a href="/show_sensor_list">View sensor list</a>
+      </li>
+    </ul>
+  </div>
+  <div class="col-sm-4">
+  </div>
+  <div class="col-sm-3">
+    <ul style="list-style-type:none;"> 
+      <li>
+        <a href="/sensors">Reset Zoom</a>
       </li>
     </ul>
   </div>
