--- a/app/views/traffic_managers/edit_profile.html.erb
+++ b/app/views/traffic_managers/edit_profile.html.erb
@@ -1,36 +1,38 @@
-<div >
-  <h5>
-    Edit Traffic Manager Account
-  </h5>
-
-  <div>
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <h2>
+      Update your account
+    </h2>
+       
     <form action="/patch_traffic_manager" method="post">
-      <div>
+      <div class="form-group">
         <label for="email_box">Email</label>
-        <input id="email_box" name="email_from_query" value="<%= @current_traffic_manager.email %>">
+        <input id="email_box" name="email_from_query" class="form-control" value="<%= @current_traffic_manager.email %>">
       </div>
-      <div>
+      <div class="form-group">
         <label for="first_name_box">First name</label>
-        <input id="first_name_box" name="first_name_from_query" value="<%= @current_traffic_manager.first_name %>">
+        <input id="first_name_box" name="first_name_from_query" class="form-control" value="<%= @current_traffic_manager.first_name %>">
       </div>
-      <div>
+      <div class="form-group">
         <label for="last_name_box">Last name</label>
-        <input id="last_name_box" name="last_name_from_query" value="<%= @current_traffic_manager.last_name %>">
+        <input id="last_name_box" name="last_name_from_query" class="form-control" value="<%= @current_traffic_manager.last_name %>">
       </div>
 
-      <div>
+      <div class="form-group">
         <label for="password_box">Password</label>
-        <input id="password_box" name="password_from_query" placeholder="Choose a password..." type="password">
+        <input id="password_box" name="password_from_query" class="form-control" placeholder="Choose a password..." type="password">
       </div>
     
-      <div>
+      <div class="form-group">
         <label for="password_confirmation_box">Password Confirmation</label>
-        <input id="password_confirmation_box" name="password_confirmation_from_query" placeholder="Confirm your password..." type="password">
+        <input id="password_confirmation_box" name="password_confirmation_from_query" class="form-control" placeholder="Confirm your password..." type="password">
       </div>
 
-      <button>
+      <button class="btn btn-block btn-primary">
         Update account
       </button>
     </form>
+    <hr>
+    
   </div>
 </div>
