Interactive speed data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,11 +84,11 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                View Data
+                Data
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Lane Speeds</a>
-                <a class="dropdown-item" href="#">Lane Counts</a>
+                <a class="dropdown-item" href="/requests">Lane Speeds</a>
+                <a class="dropdown-item" href="/requests">Lane Counts</a>
               </div>
             </li>
             <li class="nav-item">
