--- a/app/views/sensors/index.html.erb
+++ b/app/views/sensors/index.html.erb
@@ -1,43 +1,44 @@
 <head>
-<script>
-  function initMap() {
+  <script>
+    function initMap() {
 
-    var map = new google.maps.Map(document.getElementById('map'), {
-      zoom: 7.5,
-      center: {lat: 41.8780, lng: -93.0977}
-    });
-
-    // Create an array of alphabetical characters used to label the markers.
-    var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-
-    // Add some markers to the map.
-    // Note: The code uses the JavaScript Array.prototype.map() method to
-    // create an array of markers based on a given "locations" array.
-    // The map() method here has nothing to do with the Google Maps API.
-    var markers = locations.map(function(location, i) {
-      return new google.maps.Marker({
-        position: location,
-        label: labels[i % labels.length]
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 7.5,
+        center: {lat: 41.8780, lng: -93.0977}
       });
-    });
 
-    // Add a marker clusterer to manage the markers.
-    var markerCluster = new MarkerClusterer(map, markers,
-        {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
-  }
+      // Create an array of alphabetical characters used to label the markers.
+      var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
 
-  var latitudes = <%= @lats.inspect.html_safe %>
-  var longitudes = <%= @lons.inspect.html_safe %>
-  
-  var locations = [];
-  for(var i in latitudes){
-    locations.push( {"lat": latitudes[i], "lng": longitudes[i]});
-  }
+      // Add some markers to the map.
+      // Note: The code uses the JavaScript Array.prototype.map() method to
+      // create an array of markers based on a given "locations" array.
+      // The map() method here has nothing to do with the Google Maps API.
+      var markers = locations.map(function(location, i) {
+        return new google.maps.Marker({
+          position: location,
+          label: labels[i % labels.length]
+        });
+      });
 
-</script>
+      // Add a marker clusterer to manage the markers.
+      var markerCluster = new MarkerClusterer(map, markers,
+          {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
+    }
 
-<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
-</script>
+    var latitudes = <%= @lats.inspect.html_safe %>
+    var longitudes = <%= @lons.inspect.html_safe %>
+    
+    var locations = [];
+    for(var i in latitudes){
+      locations.push( {"lat": latitudes[i], "lng": longitudes[i]});
+    }
+
+  </script>
+
+  <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+  </script>
+</head>
 
 <!--
 <script>
@@ -88,9 +89,9 @@
   </div>
 </div>
 
+
 <div id="map" class="container">
   <div class="col-md-10">
-    
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5qwIlcKjijP_Ptmv46mk4cCjuWhSzS78&libraries=places&callback=initMap">
     </script>
